--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@next/font": "^13.0.2",
+    "@radix-ui/react-accordion": "^1.0.1",
+    "@radix-ui/react-icons": "^1.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "framer-motion": "^7.6.7",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
