--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/gsap": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
